[package]
name = "phren_os"
description = "A minimal OS"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Juan Milkah <juanmilkah@gmail.com"]

[dependencies]
bootloader = "0.9" # don't touch this dawg!!
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
volatile = "0.2.6"
